--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "ava": "^0.24.0",
+    "coveralls": "^3.0.0",
     "nyc": "^11.4.1",
     "rollup": "^0.55.0"
   }
